--- a/geneocr-api/1.0/Dockerfile
+++ b/geneocr-api/1.0/Dockerfile
@@ -10,6 +10,8 @@ LABEL about.summary="API of geneocr tool, which reads gene names in images"
 LABEL about.home="https://github.com/bedapub/geneocr-api"
 LABEL maintainer="Jitao David Zhang"
 LABEL maintainer.email="jitao_david.zhang@roche.com"
+LABEL about.license="GPL-3+"
+LABEL about.license_file="/geneocr-api/LICENSE.md"
 
 # install dependencies
 RUN export DEBIAN_FRONTEND=noninteractive && \
