--- a/geneocr-api/1.0/Dockerfile
+++ b/geneocr-api/1.0/Dockerfile
@@ -10,7 +10,7 @@ LABEL about.summary="API of geneocr tool, which reads gene names in images"
 LABEL about.home="https://github.com/bedapub/geneocr-api"
 LABEL maintainer="Jitao David Zhang"
 LABEL maintainer.email="jitao_david.zhang@roche.com"
-LABEL about.license="GPL-3+"
+LABEL about.license="GPL-3.0-or-later"
 LABEL about.license_file="/geneocr-api/LICENSE.md"
 
 # install dependencies
@@ -24,7 +24,7 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
 RUN apt-get install ffmpeg libsm6 libxext6 libleptonica-dev tesseract-ocr libtesseract-dev python3-pil tesseract-ocr-eng tesseract-ocr-script-latn  -y
 
 
-RUN git clone --depth=s1 https://github.com/bedapub/geneocr-api.git && \
+RUN git clone --depth=1 https://github.com/bedapub/geneocr-api.git && \
     cd geneocr-api && \
     ls
 
