--- a/eido/0.1.9/Dockerfile
+++ b/eido/0.1.9/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 
 # Metadata
 LABEL base_image="biocontainers:latest"
-LABEL version="1"
+LABEL version="2"
 LABEL software="eido"
 LABEL software.version="0.1.9"
 LABEL about.summary="An open source tool used to validate and convert PEP format sample metadata against a schema."
@@ -19,4 +19,5 @@ USER root
 
 RUN apt-get update && \
     apt-get install -y python3 python3-pip && \
+    pip3 install peppy==0.35.2 && \
     pip3 install eido==0.1.9
