--- a/mace/1.2/Dockerfile
+++ b/mace/1.2/Dockerfile
@@ -13,7 +13,7 @@ LABEL about.tags="Genomics"
 LABEL about.home="http://chipexo.sourceforge.net/"
 LABEL about.software="https://sourceforge.net/projects/chipexo/files/MACE-1.2.tar.gz"
 LABEL about.documentation="http://chipexo.sourceforge.net/"
-LABEL about.license="http://chipexo.sourceforge.net/"
+LABEL about.license="GPL-3.0"
 LABEL about.author="Wang, Liguo"
 
 ################## MAINTAINER ######################
