--- a/ncbi-datasets-cli/14.2.2/Dockerfile
+++ b/ncbi-datasets-cli/14.2.2/Dockerfile
@@ -13,8 +13,10 @@ LABEL about.tags="Genomics"
 LABEL about.home="https://www.ncbi.nlm.nih.gov/datasets"
 LABEL about.software="https://www.ncbi.nlm.nih.gov/datasets"
 LABEL about.documentation="https://www.ncbi.nlm.nih.gov/datasets/docs/"
-LABEL about.license="Public Domain"
+LABEL about.license="public_domain"
+LABEL about.licence_file="https://github.com/ncbi/datasets/blob/master/LICENSE.md"
 LABEL about.author="NCBI"
+LABEL extra.identifiers.biotools="ncbi_datasets"
 
 ################## MAINTAINER ######################
 MAINTAINER Priyanka Surana <ps22@sanger.ac.uk>
