--- a/openbugs/3.2.3/Dockerfile
+++ b/openbugs/3.2.3/Dockerfile
@@ -7,7 +7,7 @@ LABEL base_image="debian:11-slim"
 LABEL version="1"
 LABEL software="openbugs"
 LABEL software.version="3.2.3"
-LABEL about.summary="A probabilistic alignment masking program"
+LABEL about.summary="Bayesian analysis of complex statistical models using Markov chain Monte Carlo (MCMC) methods"
 LABEL about.home="https://www.mrc-bsu.cam.ac.uk/software/bugs/openbugs/"
 LABEL about.documentation="https://www.mrc-bsu.cam.ac.uk/wp-content/uploads/2021/06/OpenBUGS_Manual.pdf"
 LABEL about.license_file="/opt/Openbugs/COPYING"
