correct patchwork compilation step

--- a/patchwork/0.5.2/Dockerfile
+++ b/patchwork/0.5.2/Dockerfile
@@ -12,14 +12,15 @@ WORKDIR /home/patchwork
 USER patchwork
 ENV VERSION 0.5.2
 
-RUN wget https://julialang-s3.julialang.org/bin/linux/x64/1.8/julia-1.8.2-linux-x86_64.tar.gz \
-    && tar xzvf julia-1.8.2-linux-x86_64.tar.gz 
+RUN wget https://julialang-s3.julialang.org/bin/linux/x64/1.8/julia-1.8.3-linux-x86_64.tar.gz \
+    && tar xzvf julia-1.8.3-linux-x86_64.tar.gz 
 RUN wget http://github.com/bbuchfink/diamond/releases/download/v2.0.13/diamond-linux64.tar.gz \
     && tar xvzf diamond-linux64.tar.gz
-ENV PATH /home/patchwork/julia-1.8.2/bin:$PATH
+ENV PATH /home/patchwork/julia-1.8.3/bin:$PATH
 RUN wget https://github.com/fethalen/Patchwork/archive/v$VERSION.tar.gz \
     && tar xvzf v$VERSION.tar.gz && cd Patchwork-$VERSION \ 
-    && julia src/compile.jl . src/precompiled.jl ../patchwork-$VERSION
+    && julia --project=. -e "import Pkg; Pkg.instantiate()" \
+    && julia --project=. src/compile.jl . src/precompiled.jl ../patchwork-$VERSION
 
 
 # To reduce the final image size, use a multi-stage build:
