--- a/ilastik/1.3.3/Dockerfile
+++ b/ilastik/1.3.3/Dockerfile
@@ -1,9 +1,9 @@
-FROM continuumio/miniconda3
+FROM ubuntu:22.04 
 
-LABEL base_image="continuumio/miniconda3"
+LABEL base_image="ubuntu:22.04"
 LABEL version="1"
 LABEL software="ilastik"
-LABEL software.version="1.4.0rc8"
+LABEL software.version="1.3.3post3"
 LABEL about.summary="the interactive learning and segmentation toolkit"
 LABEL about.home="https://ilastik.org"
 LABEL about.license="GPL-2.0-or-later"
@@ -16,27 +16,28 @@ MAINTAINER Yi Sun <sunyi000@gmail.com>
 
 
 ARG DEBIAN_FRONTEND="noninteractive"
-ARG ILASTIK_VERSION="1.4.0rc8"
+ARG ILASTIK_VERSION="1.3.3post3"
 
 ENV LANG=en_US.UTF-8 \
     LC_ALL=en_US.UTF-8 \
     LANGUAGE=en_US:en  \
     NUMBA_CACHE_DIR=/tmp/numba_cache \
-    CONDA_BIN_PATH="/opt/conda/bin" \
     BIOIMAGEIO_CACHE_PATH="/tmp/pybio_cache" \
-    PATH="/opt/conda/envs/ilastik/bin:$PATH"
+    PATH="/opt/ilastik-$ILASTIK_VERSION-Linux:$PATH"
     
 
 
 RUN apt-get update -qq && \
     apt-get install -y  \
+            apt-utils \
             locales \
             build-essential \
             libglu1-mesa-dev \
             qtcreator \
             libgl1-mesa-glx \
             nautilus \
-            xdg-utils && \
+            xdg-utils \
+            wget && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* 
 
@@ -44,8 +45,9 @@ RUN apt-get update -qq && \
 RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
     locale-gen
 
-RUN conda install mamba -n base -c conda-forge
+WORKDIR /opt/
+RUN wget https://files.ilastik.org/ilastik-1.3.3post3-Linux.tar.bz2 && \
+    tar xjf ilastik-1.*-Linux.tar.bz2
 
-RUN mamba create -n ilastik --override-channels -c pytorch -c ilastik-forge -c conda-forge ilastik=$ILASTIK_VERSION  -y
 
-#ENTRYPOINT["ilastik"]
+#ENTRYPOINT["run_ilastik.sh"]
