--- a/r-metamix/0.3/Dockerfile
+++ b/r-metamix/0.3/Dockerfile
@@ -13,7 +13,7 @@ LABEL about.tags="Metagenomics"
 LABEL about.home="https://cran.r-project.org/src/contrib/Archive/metaMix/"
 LABEL about.software="https://cran.r-project.org/src/contrib/Archive/metaMix/"
 LABEL about.documentation="https://cran.r-project.org/src/contrib/Archive/metaMix/"
-LABEL about.license="GPL3"
+LABEL about.license="GPL-3.0-or-later"
 LABEL about.licence_file="https://github.com/cran/metaMix/blob/master/DESCRIPTION"
 LABEL about.author="Sofia Morfopoulou"
 LABEL extra.identifiers.biotools="metaMix"
