Added the biotools link

--- a/mitohifi/3.0.0/Dockerfile
+++ b/mitohifi/3.0.0/Dockerfile
@@ -12,6 +12,7 @@ LABEL about.documentation="https://github.com/marcelauliano/MitoHiFi"
 LABEL about.license="MIT"
 LABEL about.license_file="https://github.com/marcelauliano/MitoHiFi/blob/master/LICENSE"
 LABEL about.tags="mitogenome, MT, organelle"
+LABEL extra.identifiers.biotools="MitoHiFi"
 
 # Maintainer
 MAINTAINER Ksenia Krasheninnikova kk16@sanger.ac.uk
