remove the tar archive to hopefully save some space
i noticed that the tar file is still present in the docker container.
Removing it should save 800mb...

--- a/ilastik/1.4.0/Dockerfile
+++ b/ilastik/1.4.0/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:22.04 
 
 LABEL base_image="ubuntu:22.04"
-LABEL version="1"
+LABEL version="2"
 LABEL software="ilastik"
 LABEL software.version="1.4.0"
 LABEL about.summary="the interactive learning and segmentation toolkit"
@@ -45,7 +45,8 @@ RUN sed -i '/en_US.UTF-8/s/^# //g' /etc/locale.gen && \
 
 WORKDIR /opt/
 RUN wget https://files.ilastik.org/ilastik-1.4.0-Linux.tar.bz2 && \
-    tar xjf ilastik-1.*-Linux.tar.bz2
+    tar xjf ilastik-1.*-Linux.tar.bz2 && \
+    rm -f ilastik-1.*-Linux.tar.bz2
 
 
 #ENTRYPOINT["run_ilastik.sh"]
