Added procps  to container
This PR adds procps to the docker container. The procps package is required for creating reports in nextflow and using [nf-tower](https://tower.nf/). 

The Cellpose nf-core module requires this addition to fully work in nextflow pipelines: https://github.com/nf-core/modules/blob/master/modules/nf-core/cellpose/main.nf

--- a/cellpose/2.1.1/Dockerfile
+++ b/cellpose/2.1.1/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.8-slim
 
 LABEL base_image="python:3.8-slim"
-LABEL version="1"
+LABEL version="2"
 LABEL software="cellpose"
 LABEL software.version="2.1.1"
 LABEL about.summary="A generalist algorithm for cell and nucleus segmentation."
@@ -38,6 +38,7 @@ RUN apt-get update -qq && \
             ca-certificates \
             curl \
             locales \
+            procps \
             unzip && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* 
