--- a/cellpose/2.1.1/Dockerfile
+++ b/cellpose/2.1.1/Dockerfile
@@ -1,7 +1,7 @@
-FROM python:3.8-slim
+FROM python:3.8
 
 LABEL base_image="python:3.8-slim"
-LABEL version="1"
+LABEL version="2"
 LABEL software="cellpose"
 LABEL software.version="2.1.1"
 LABEL about.summary="A generalist algorithm for cell and nucleus segmentation."
