--- a/rsat/20230602/Dockerfile
+++ b/rsat/20230602/Dockerfile
@@ -12,6 +12,7 @@ LABEL software="rsat"
 LABEL software.version="20230602"
 LABEL about.tags="implemented-in::perl,R,python,C"
 LABEL about.home="http://rsat.eu"
+LABEL extra.identifiers.biotools="rsat"
 LABEL about.software="https://github.com/rsa-tools/rsat-code"
 LABEL about.documentation="https://github.com/rsa-tools"
 LABEL about.license="AGPL-3.0-only"
