Deleted bio.tools allcatchr entry

--- a/allcatchr/1.0.0/Dockerfile
+++ b/allcatchr/1.0.0/Dockerfile
@@ -13,7 +13,6 @@ LABEL about.home="https://github.com/ThomasBeder/ALLCatchR"
 LABEL about.documentation="https://github.com/ThomasBeder/ALLCatchR"
 LABEL about.license_file="https://github.com/ThomasBeder/ALLCatchR/blob/main/LICENSE.txt"
 LABEL about.license="MIT"
-LABEL extra.identifiers.biotools="allcatchr"
 LABEL about.tags="Transcriptomics"
 
 ################## MAINTAINER ######################
@@ -23,6 +22,7 @@ MAINTAINER Nadine Wolgast <NadineWolgast@gmx.de>
 ################## INSTALLATION ######################
 
 USER root
+ENV DEBIAN_FRONTEND=noninteractive
 # Install system dependencies
 RUN apt-get update && apt-get install -y libcurl4-openssl-dev libssl-dev libfontconfig1-dev \
     libxml2-dev libharfbuzz-dev libfribidi-dev libfreetype6-dev \
@@ -32,5 +32,5 @@ RUN R -e "library(devtools)"
 RUN R -e "devtools::install_github(\"ThomasBeder/ALLCatchR\")"
 RUN R -e "library(ALLCatchR)"
 
-USER biodocker
+#USER biodocker
 WORKDIR /data/
