Deleted bio.tools allcatchr entry

--- a/allcatchr/1.0.0/Dockerfile
+++ b/allcatchr/1.0.0/Dockerfile
@@ -32,5 +32,5 @@ RUN R -e "library(devtools)"
 RUN R -e "devtools::install_github(\"ThomasBeder/ALLCatchR\")"
 RUN R -e "library(ALLCatchR)"
 
-#USER biodocker
-WORKDIR /data/
+USER biodocker
+
