Update Dockerfile of the OpenMS
Addition of the command line (line number 32)

"echo '#!/bin/sh\nsudo -E -H -u root FileInfo "$@"' > /usr/bin/FileInfo_anyuser && \"

problem:
when the input file is a folder , then .config files are also copied to the local machine from the docker.

Description: This will remove the .config folder generated.

The problem is similar to :
https://github.com/ProteoWizard/container/pull/23

--- a/openms/2.2.0/Dockerfile
+++ b/openms/2.2.0/Dockerfile
@@ -29,6 +29,7 @@ RUN      apt-get -y update && \
                                  libboost-random1.58.0 && \
          apt-get clean && \
          apt-get purge && \
+         echo '#!/bin/sh\nsudo -E -H -u root FileInfo "$@"' > /usr/bin/FileInfo_anyuser && \
          rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # install build dependencies: libsvm, zlib, glpk, xerces
