use fork for now

--- a/stitching-spark/1.9.0/Dockerfile
+++ b/stitching-spark/1.9.0/Dockerfile
@@ -1,10 +1,10 @@
 # Temporary container for building cleanly
 FROM janeliascicomp/builder:1.2.1 as builder
-ARG STITCHING_SPARK_GIT_TAG=1.9.0
+ARG STITCHING_SPARK_GIT_TAG=master
 
 # Checkout and build the code
 WORKDIR /tmp/app
-RUN git clone --branch $STITCHING_SPARK_GIT_TAG --depth 1 https://github.com/saalfeldlab/stitching-spark.git . \
+RUN git clone --branch $STITCHING_SPARK_GIT_TAG --depth 1 https://github.com/krokicki/stitching-spark.git . \
     && git submodule update --init --recursive \
     && /usr/local/bin/buildinfo.sh \
     && mvn package
