Update Dockerfile, added tag to git clone

--- a/rsat/20230825/Dockerfile
+++ b/rsat/20230825/Dockerfile
@@ -105,7 +105,7 @@ WORKDIR /packages
 
 ## <----  Clone RSAT repository into your working dir
 
-RUN git clone https://github.com/rsa-tools/rsat-code.git
+RUN git clone https://github.com/rsa-tools/rsat-code.git --branch 20230825 --single-branch
 
 ########################################################       Notes       ########################################################
 # [Jun2023] When clonning 'motif_databases' you get 
