--- a/stitching-spark/1.10.0/Dockerfile
+++ b/stitching-spark/1.10.0/Dockerfile
@@ -1,10 +1,14 @@
+ARG SPARK_VERSION=3.1.3
+ARG STITCHING_SPARK_GIT_TAG=1.10.0
+
 # Temporary container for building cleanly
 FROM janeliascicomp/builder:1.2.1 as builder
-ARG STITCHING_SPARK_GIT_TAG=master
+ARG STITCHING_SPARK_GIT_TAG
 
 # Checkout and build the code
 WORKDIR /tmp/app
-RUN git clone --branch $STITCHING_SPARK_GIT_TAG --depth 1 https://github.com/krokicki/stitching-spark.git . \
+# TODO: currently this points to a fork which adds a minor feature. It can be switched back to https://github.com/saalfeldlab/stitching-spark after the PR is merged.
+RUN git clone --branch ${STITCHING_SPARK_GIT_TAG} --depth 1 https://github.com/krokicki/stitching-spark.git . \
     && git submodule update --init --recursive \
     && /usr/local/bin/buildinfo.sh \
     && mvn package
@@ -16,14 +20,17 @@ RUN xq -r '.project.artifactId+"-"+.project.version+".jar"' pom.xml > filename \
 RUN echo "$STITCHING_SPARK_GIT_TAG" > /tmp/app/VERSION
 
 # Create final image
-FROM multifish/biocontainers-spark:3.1.3
+FROM multifish/biocontainers-spark:${SPARK_VERSION}
+ARG STITCHING_SPARK_GIT_TAG
 
+MAINTAINER biocontainers <biodocker@gmail.com>
 LABEL software="stitching-spark" \
     base_image="apache/spark" \
     container="stitching-spark" \
     about.summary="Reconstructing large microscopy images from overlapping image tiles on a high-performance Spark cluster" \
     about.home="https://github.com/saalfeldlab/stitching-spark" \
-    software.version="1.9.0" \
+    software.version=${STITCHING_SPARK_GIT_TAG} \
+    upstream.version=${STITCHING_SPARK_GIT_TAG} \
     version="1" \
     about.license="SPDX:GPL-2.0" \
     about.license_file="/app/LICENSE.txt" \
