--- a/hifiadapterfilt/2.0.0/Dockerfile
+++ b/hifiadapterfilt/2.0.0/Dockerfile
@@ -5,12 +5,12 @@ FROM ubuntu:20.04
 LABEL base_image="ubuntu:20.04"
 LABEL version="2"
 LABEL software="HiFiAdapterFilt"
-LABEL software.version="v2.0.0"
+LABEL software.version="2.0.0"
 LABEL about.summary="Remove CCS reads with remnant PacBio adapter sequences and convert outputs to a compressed .fastq (.fastq.gz)."
 LABEL about.home="https://github.com/sheinasim/HiFiAdapterFilt"
 LABEL about.documentation="https://github.com/sheinasim/HiFiAdapterFilt"
-LABEL about.license_file="https://github.com/sheinasim/HiFiAdapterFilt/LICENSE"
-LABEL about.license="GNU General Public License v3.0"
+LABEL about.license_file="https://github.com/sheinasim/HiFiAdapterFilt/blob/master/LICENSE"
+LABEL about.license="GPL-3.0"
 LABEL extra.identifiers.biotools="hifiadapterfilt"
 LABEL about.tags="genomics, hifi"
 
