renamed folders to include python version

--- a/dask/2023.10.1-py11-ol9/Dockerfile
+++ b/dask/2023.10.1-py11-ol9/Dockerfile
@@ -10,6 +10,7 @@ LABEL about.home="https://www.dask.org"
 LABEL about.license="BSD-3-Clause"
 LABEL about.license_file="https://github.com/dask/dask/blob/main/LICENSE.txt"
 LABEL about.documentation="https://docs.dask.org/en/stable/"
+LABEL maintainer="biocontainers biodocker@gmail.com"
 
 ARG TARGETPLATFORM
 
