--- a/vamb/4.1.3/Dockerfile
+++ b/vamb/4.1.3/Dockerfile
@@ -8,7 +8,9 @@ LABEL    software="vamb" \
     about.summary="VAMB: Variational autoencoders for metagenomic binning" \ 
     about.home="https://github.com/RasmussenLab/vamb" \ 
     software.version="4.1.3" \ 
-    about.copyright="2017-2018, Ryan Wick" \ 
+    version="1" \
+    extra.identifiers.biotools="vamb" \ 
+    about.copyright="Rasmussen Group" \ 
     about.license="MIT" \ 
     about.license_file="https://github.com/RasmussenLab/vamb/blob/master/LICENSE" \ 
     about.tags=""
