--- a/ncbi-tools-bin/6.1.20170106-6-deb/Dockerfile
+++ b/ncbi-tools-bin/6.1.20170106-6-deb/Dockerfile
@@ -5,7 +5,7 @@ LABEL    software="ncbi-tools-bin" \
     container="ncbi-tools-bin" \ 
     about.summary="NCBI libraries for biology applications (text-based utilities)" \ 
     about.home="http://www.ncbi.nlm.nih.gov/IEB/ToolBox/" \ 
-    software.version="6.1.20170106+dfsg1-0+deb10u2" \ 
+    software.version="6.1.20170106-6-deb" \ 
     upstream.version="6.1.20170106" \ 
     version="2" \ 
     about.copyright="1996-2017 NCBI" \ 
