Fix issue with license and cleanup conda storage

--- a/cadd-scripts-with-envs/1.6/Dockerfile
+++ b/cadd-scripts-with-envs/1.6/Dockerfile
@@ -9,7 +9,7 @@ LABEL software="cadd-scripts-with-envs" \
     about.summary="CADD is a tool for scoring the deleteriousness of single nucleotide variants as well as insertion/deletions variants in the human genome" \
     about.home="https://cadd.gs.washington.edu/" \
     about.documentation="https://github.com/kircherlab/CADD-scripts" \
-    about.license="SPDX:Custom" \
+    about.license="Custom License" \
     about.license_file="https://github.com/kircherlab/CADD-scripts/blob/v1.6.post1/LICENSE" \
     extra.binaries="/opt/conda/bin/cadd.sh" \
     about.tags="Genomics, Human geneitcs" \
@@ -23,7 +23,8 @@ RUN apt-get update && apt-get install -y procps && apt-get clean && apt-get purg
 
 # Install CADD scripts and mamba. mamba is required by snakemake (as it provides the conda command).
 # bgzip (tabix package) is required by the pipeline.
-RUN micromamba install -y -c conda-forge -c bioconda -n base cadd-scripts=$CADD_VERSION mamba tabix
+RUN micromamba install -y -c conda-forge -c bioconda -n base cadd-scripts=$CADD_VERSION mamba tabix && \
+        micromamba clean --all --yes
 
 # Ensure that the conda binaries are on the path
 ENV PATH=/opt/conda/bin:/opt/conda/condabin:$PATH
