Add usage documentation

--- a/cadd-scripts-with-envs/1.6/Dockerfile
+++ b/cadd-scripts-with-envs/1.6/Dockerfile
@@ -8,7 +8,7 @@ LABEL software="cadd-scripts-with-envs" \
     version="1" \
     about.summary="CADD is a tool for scoring the deleteriousness of single nucleotide variants as well as insertion/deletions variants in the human genome" \
     about.home="https://cadd.gs.washington.edu/" \
-    about.documentation="https://github.com/kircherlab/CADD-scripts" \
+    about.documentation="https://github.com/BioContainers/containers/blob/master/cadd-scripts-with-envs/1.6/README.md" \
     about.license="Custom License" \
     about.license_file="https://github.com/kircherlab/CADD-scripts/blob/v1.6.post1/LICENSE" \
     extra.binaries="/opt/conda/bin/cadd.sh" \
